Alignment fixes

--- a/static/css/layout/nav.scss
+++ b/static/css/layout/nav.scss
@@ -13,9 +13,6 @@ nav.top {
 	0 1px 3px rgba(0,0,0,0.1);
 
 }
-nav.top ul {
-	padding: 0 $space16;
-}
 nav.top li {
 	float: left;
 	font-size:12px;
