--- a/static/css/pages/home.scss
+++ b/static/css/pages/home.scss
@@ -144,7 +144,7 @@ a.device-right img  {
 }
 a.device-left{ 
 	left: 0; 
-	top:-10px;
+	top:-40px;
 }
 a.device-mid {
 	left: 50%; margin-left: -151px;
@@ -153,7 +153,7 @@ a.device-mid {
 }
 a.device-right { 
 	right: 0;
-	top:-10px;
+	top:-40px;
 }
 
 // Interaction block
